# ansisop-parser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
dummy-cpu/: CMakeLists.txt  README.md  dummy_ansisop.c  dummy_ansisop.h  makefile  runner.c
parser/: CMakeLists.txt  makefile
parser-tests/: .analizadorLineaTest.c.swp  CMakeLists.txt  analizadorLineaTest.c  makefile  parserUtils.c  parserUtils.h  parserUtils.h.c
parser-tests/utils/: parserUtils.h  parserUtils.h.c
parser/parser/: metadata_program.c  metadata_program.h  parser.c  parser.h  sintax.h
programas-ejemplo/: alocado.ansisop  alocado.ansisop~  completo.ansisop  consumidor.ansisop  copiarArchivo.ansisop  editarFS.ansisop  facil.ansisop  for.ansisop  imprimirArchivo.ansisop  liberando.ansisop  productor.ansisop  stackoverflow.ansisop
programas-ejemplo/evaluacion-final-esther/Scripts-Prueba/: consumidor.ansisop  creaArchivo.ansisop  creaGigante.ansisop  escribirFS.ansisop  heapbasico.ansisop  heapcompactar.ansisop  heappasado.ansisop  leeBorra.ansisop  leerFS.ansisop  llenandomemoria.ansisop  productor.ansisop
programas-ejemplo/evaluacion-final-esther/prueba-basica/: FS.tgz  escribirFS.ansisop  leerFS.ansisop  stackoverflow.ansisop
so-ansisop-parser-dummy/: CMakeLists.txt  dummy_ansisop.c  dummy_ansisop.h  main.c  makefile  runner.c
so-ansisop-parser-dummy/tests/: analizadorLineaTest.c
so-ansisop-parser-dummy/tests/utils/: parserUtils.h  parserUtils.h.c
